--- a/SmartPos/Views/Factura/FacturacionView.xaml
+++ b/SmartPos/Views/Factura/FacturacionView.xaml
@@ -161,7 +161,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="0" Command="{Binding PagarCommand}" Background="#28A745" Foreground="White" Margin="0,0,5,0">
+                <Button Grid.Column="0" Command="{Binding MostrarVentanaDePagoCommand}" Background="#28A745" Foreground="White" Margin="0,0,5,0">
                     <StackPanel>
                         <TextBlock Text="Pagar" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"/>
                         <TextBlock Text="[F12]" FontSize="10" HorizontalAlignment="Center" Opacity="0.8"/>
