Se agrego metodo para obener cliente generico

--- a/SmartPos/Views/CobrosView.xaml
+++ b/SmartPos/Views/CobrosView.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         Title="FINALIZAR VENTA" Height="480" Width="500"
-        WindowStartupLocation="CenterOwner"
+        WindowStartupLocation="CenterScreen"
         GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
         BorderThickness="1"
         WindowStyle="None">
