--- a/SmartPos/Views/BusquedaArticuloView.xaml
+++ b/SmartPos/Views/BusquedaArticuloView.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         Title="BUSCADOR DE ARTÍCULOS" Height="500" Width="850"
-        WindowStartupLocation="CenterOwner"
+        WindowStartupLocation="CenterScreen"
         GlowBrush="{DynamicResource MahApps.Brushes.Accent}">
 
     <Grid Margin="15">
