--- a/SmartPos/Views/ClientesBusquedaView.xaml
+++ b/SmartPos/Views/ClientesBusquedaView.xaml
@@ -7,7 +7,7 @@
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
         Title="BUCADOR DE CLIENTES" Height="500" Width="850"
-        WindowStartupLocation="CenterOwner"
+        WindowStartupLocation="CenterScreen"
         GlowBrush="{DynamicResource MahApps.Brushes.Accent}">
     <Grid Margin="15">
         <Grid.RowDefinitions>
