--- a/SmartPos/App.xaml
+++ b/SmartPos/App.xaml
@@ -31,7 +31,9 @@
             <DataTemplate DataType="{x:Type viewModels:FacturacionViewModel}">
                 <factura:FacturacionView />
             </DataTemplate>
-
+            <DataTemplate DataType="{x:Type viewModels:ClienteViewModel}">
+                <views:ClienteView />
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
