Se agrego el metodo para generar el reporte de cierre y el cerrar el batch

--- a/SmartPos/Views/Factura/FacturacionView.xaml
+++ b/SmartPos/Views/Factura/FacturacionView.xaml
@@ -173,6 +173,7 @@
         <Button Content="Reporte Z" 
                 Style="{StaticResource MahApps.Styles.Button.Flat}"
                 Background="White"
+                Command="{Binding GenerarReporteZCommand}"
                 mah:ControlsHelper.ContentCharacterCasing="Normal"/>
     </Border>
 
